edit to main pom.xml for annotations